fix SH5 functie de REG si DIS, instrument 1

--- a/src/pages/instruments/01_cpis_en.html
+++ b/src/pages/instruments/01_cpis_en.html
@@ -5652,42 +5652,12 @@
                 </div>
             </div>
 
-            <p>Current service according to the corresponding Register</p>
-
-            <div class="grid grid-cols-2 items-center gap-4 mt-6">
-                <div>SH5r. Region</div>
-                <div>
-                    <select id="sh5r" name="sh5r"
-                        class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                        <option value="-9" class="t_choose">--- choose ---</option>
-                    </select>
-                </div>
-            </div>
-
-            <div class="grid grid-cols-2 items-center gap-4 mt-6">
-                <div>SH5d. District</div>
-                <div>
-                    <select id="sh5d" name="sh5d"
-                        class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                        <option value="-9" class="t_choose">--- choose ---</option>
-                    </select>
-                </div>
-            </div>
+            <input type="hidden" id="sh5s" name="sh5s" />
 
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div>SH5s. Settlement</div>
+                <div>SH5. The unique code of the current service according to the corresponding Register.</div>
                 <div class="flex gap-4">
-                    <select id="sh5s" name="sh5s"
-                        class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                        <option value="-9" class="t_choose">--- choose ---</option>
-                    </select>
-                </div>
-            </div>
-
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div>SH5i. Institution</div>
-                <div class="flex gap-4">
-                    <select id="sh5i" name="sh5i"
+                    <select id="sh5" name="sh5"
                         class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                         <option value="-9" class="t_choose">--- choose ---</option>
                     </select>
