--- a/src/pages/instruments/01_cpis_ru.html
+++ b/src/pages/instruments/01_cpis_ru.html
@@ -5658,40 +5658,12 @@
                 </div>
             </div>
 
-            <div class="grid grid-cols-2 items-center gap-4 mt-6">
-                <div>SH5r. Область</div>
-                <div>
-                    <select id="sh5r" name="sh5r"
-                        class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                        <option value="-9" class="t_choose">--- choose ---</option>
-                    </select>
-                </div>
-            </div>
-
-            <div class="grid grid-cols-2 items-center gap-4 mt-6">
-                <div>SH5d. Район </div>
-                <div>
-                    <select id="sh5d" name="sh5d"
-                        class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                        <option value="-9" class="t_choose">--- choose ---</option>
-                    </select>
-                </div>
-            </div>
-
-            <div class="grid grid-cols-2 items-center gap-4 mt-6">
-                <div>SH5s. Населённый пункт</div>
-                <div>
-                    <select id="sh5s" name="sh5s"
-                        class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
-                        <option value="-9" class="t_choose">--- choose ---</option>
-                    </select>
-                </div>
-            </div>
+            <input type="hidden" id="sh5s" name="sh5s" />
 
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div>SH5i. учреждение</div>
+                <div>SH5. Текущей услуги согласно соответствующему Реестру</div>
                 <div class="flex gap-4">
-                    <select id="sh5i" name="sh5i"
+                    <select id="sh5" name="sh5"
                         class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                         <option value="-9" class="t_choose">--- choose ---</option>
                     </select>
